Edit stylesheet url for bootstrap docs

--- a/share/docs.jade
+++ b/share/docs.jade
@@ -10,7 +10,7 @@ html
         #{title}
     meta(charset='utf-8')
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css')
-    link(rel='stylesheet', href='http://getbootstrap.com/assets/css/docs.css')
+    link(rel='stylesheet', href='http://getbootstrap.com/docs-assets/css/docs.css')
     if (resources.docs && resources.docs.css)
       style !{resources.docs.css}
     if (resources.previews && resources.previews.js)
